--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -1,14 +1,35 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>Terms and Conditions</title>
+    <meta charset="UTF-8">
+    <title>Terms and Conditions - Follow Through</title>
+    <style>
+        body { font-family: "Times New Roman", Times, serif; line-height: 1.6; max-width: 800px; margin: 40px auto; padding: 20px; color: #000; }
+        h1 { text-align: center; text-decoration: underline; }
+        h2 { text-transform: uppercase; font-size: 1.1em; margin-top: 30px; }
+    </style>
 </head>
-
 <body>
     <h1>Terms and Conditions</h1>
-    <p>This is my GitHub Pages site.</p>
-</body>
+    <p><strong>Effective Date:</strong> February 13, 2026</p>
+    <p>These Terms govern your use of the <strong>Follow Through</strong> app ("the App"), developed by <strong>SunkenPeak</strong>. By using the App, you agree to these terms.</p>
 
+    <h2>1. Intellectual Property & Proprietary Data</h2>
+    <p>The App, including its code, AI models, and interface, is owned by SunkenPeak. Any timestamps or rally data detected by the App are considered proprietary information of SunkenPeak and are provided for personal use only.</p>
+
+    <h2>2. Prohibited Activities</h2>
+    <ul>
+        <li><strong>Reverse Engineering:</strong> You may not decompile, reverse engineer, or attempt to extract the source code or model weights of the App.</li>
+        <li><strong>Data Distillation:</strong> You are strictly prohibited from using the output of this App (e.g., detected timestamps) to train, improve, or "distill" data for any other machine learning models or software.</li>
+    </ul>
+
+    <h2>3. AI Accuracy Disclaimer</h2>
+    <p>The App uses on-device AI to identify table tennis rallies. You acknowledge that AI is not perfect. SunkenPeak is not liable for missed rallies, incorrect timestamps, or any footage not captured or identified correctly by the App. The service is provided "as-is."</p>
+
+    <h2>4. Credits and Purchases</h2>
+    <p>All financial transactions are handled via the Apple App Store. The "Professional/Lifetime" purchase is permanent. Credits are synced via CloudKit and have no cash value. Refund requests must be directed to Apple.</p>
+
+    <h2>5. Contact</h2>
+    <p>For questions, contact <strong>sunkenpeak@gmail.com</strong>.</p>
+</body>
 </html>
